# XiaoxiaoNiu

./: .gitignore  README.md  pyproject.toml  start.sh  vercel.json
Backend/: api.py  page_metrics.json  xiaoxiaoniu_solver.py
Frontend/: index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  styles.css
api/: index.py
docs/superpowers/plans/: 2026-04-24-frontend-redesign.md
docs/superpowers/specs/: 2026-04-24-frontend-redesign-design.md
